Modification de la page d'accueil pour le rendre reponsive

--- a/HTML - PHP/draft.html
+++ b/HTML - PHP/draft.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Human Benchmark : accueil</title>
     <link href="../CSS/style.css" rel="stylesheet" media="all">
+    <link href="../CSS/accueil.css" rel="stylesheet" media="all">
 </head>
 <body>
     <header>
@@ -23,15 +24,15 @@
             <h1>Mesurez vos capacités cérébrales</h1>
         </div>
         <div class="choice">
-            <div class="games">
+            <div class="container">
                 <h2>Découvrez les différents jeux</h2>
                 <img src="../Annexes/jeu.png" alt="Dessin représentant un jeu"><br>
-                <a href="jeux.html"><button>Découvrir</button></a>
+                <a href="jeux.html"><button><b>Découvrir</b></button></a>
             </div>
-            <div class="rank">
+            <div class="container">
                 <h2>Jettez un oeil à vos classements</h2>
                 <img src="../Annexes/rank.png" alt="Dessin représentant un classement"><br>
-                <button>Découvrir</button>
+                <button><b>Découvrir</b></button>
             </div>
         </div>
         <div class="text">
