début refonte de la page du choix du jeu

--- a/HTML - PHP/jeux.html
+++ b/HTML - PHP/jeux.html
@@ -21,31 +21,33 @@
     </header>
     <main class="gamePage">
         <div class="titre-jeux"><h1>Choisissez votre entraînement</h1></div>
-        <div class="container">
-            <div class="image-container">
-                <a href="jeu-reflexe.html"><img src="../Annexes/logo_reflexe.png" alt="Logo pour le jeu des réflexes"></a>
+        <div class="choice">
+            <div class="container">
+                <div class="image-container">
+                    <a href="jeu-reflexe.html"><img src="../Annexes/logo_reflexe.png" alt="Logo pour le jeu des réflexes"></a>
+                </div>
+                <div class="text-spe">
+                    <p>Testez vos rélflexes dans ce jeu dans lequel vous devrez cliquer le plus vite possible après le feu vert.</p><br>
+                    <a href="jeu-reflexe.html"><button>Jouer</button></a>
+                </div>
             </div>
-            <div class="text-spe">
-                <p>Testez vos rélflexes dans ce jeu dans lequel vous devrez cliquer le plus vite possible après le feu vert.</p><br>
-                <a href="jeu-reflexe.html"><button>Jouer</button></a>
+            <div class="container">
+                <div class="image-container">
+                    <a href="jeu-sequence.html"><img src="../Annexes/logo_sequence.png" alt="Logo pour le jeu de mémoire de nombres"></a>
+                </div>
+                <div class="text-spe">
+                    <p>Testez votre mémoire instantannée dans ce jeu où vous devrez réécrire des nombres de plus en plus grand.</p>
+                    <a href="jeu-sequence.html"><button>Jouer</button></a>
+                </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="image-container">
-                <a href="jeu-sequence.html"><img src="../Annexes/logo_sequence.png" alt="Logo pour le jeu de mémoire de nombres"></a>
-            </div>
-            <div class="text-spe">
-                <p>Testez votre mémoire instantannée dans ce jeu où vous devrez réécrire des nombres de plus en plus grand.</p>
-                <a href="jeu-sequence.html"><button>Jouer</button></a>
-            </div>
-        </div>
-        <div class="container">
-            <div class="image-container">
-                <a href="jeu-visuel.html"><img src="../Annexes/logo_visuel.png" alt="Logo pour le jeu de mémoire visuelle"></a>
-            </div>
-            <div class="text-spe">
-                <p>Testez votre mémoire visuelle dans ce jeu où vous devrez reconstruire des patternes</p>
-                <a href="jeu-visuel.html"><button>Jouer</button></a>
+            <div class="container">
+                <div class="image-container">
+                    <a href="jeu-visuel.html"><img src="../Annexes/logo_visuel.png" alt="Logo pour le jeu de mémoire visuelle"></a>
+                </div>
+                <div class="text-spe">
+                    <p>Testez votre mémoire visuelle dans ce jeu où vous devrez reconstruire des patternes</p>
+                    <a href="jeu-visuel.html"><button>Jouer</button></a>
+                </div>
             </div>
         </div>
     </main>
