Ajout de deux pages responsives : page d'accueil et page de sélection des jeux. Les pages s'adaptent désormais à tous les formats.

--- a/HTML - PHP/jeux.html
+++ b/HTML - PHP/jeux.html
@@ -27,7 +27,9 @@
                     <a href="jeu-reflexe.html"><img src="../Annexes/logo_reflexe.png" alt="Logo pour le jeu des réflexes"></a>
                 </div>
                 <div class="text-spe">
-                    <p>Testez vos rélflexes dans ce jeu dans lequel vous devrez cliquer le plus vite possible après le feu vert.</p><br>
+                    <p>Testez vos rélflexes dans ce jeu dans lequel vous devrez cliquer le plus vite possible après le feu vert.</p>
+                </div>
+                <div class="bouton">
                     <a href="jeu-reflexe.html"><button>Jouer</button></a>
                 </div>
             </div>
@@ -37,6 +39,8 @@
                 </div>
                 <div class="text-spe">
                     <p>Testez votre mémoire instantannée dans ce jeu où vous devrez réécrire des nombres de plus en plus grand.</p>
+                </div>
+                <div class="bouton">
                     <a href="jeu-sequence.html"><button>Jouer</button></a>
                 </div>
             </div>
@@ -46,6 +50,8 @@
                 </div>
                 <div class="text-spe">
                     <p>Testez votre mémoire visuelle dans ce jeu où vous devrez reconstruire des patternes</p>
+                </div>
+                <div class="bouton">
                     <a href="jeu-visuel.html"><button>Jouer</button></a>
                 </div>
             </div>
