Renommage des dossiers et modification de la page de connexion: vérifie si l'utilisateur existe en bdd, si oui redirige vers draft.html sinon recharge la page avec un message d'erreur

--- a/PAGES/draft.html
+++ b/PAGES/draft.html
@@ -16,7 +16,7 @@
         </div>
         <div class="buttons">
             <a href="inscription.html"><button>S'inscrire</button></a>
-            <a href="connexion.html"><button>Se connecter</button></a>
+            <a href="connexion.php"><button>Se connecter</button></a>
         </div>
     </header>
     <main class="homePage">
